fix: getMatchById
